xml/src1/objects/Nascum_Dues__c.object
<CustomObject>
    <description>To check whether the payment was made for each year</description>
    <fields>
        <fullName>Educational_Instution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Educational Institution Organization</description>
        <label>Educational Instution</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>NASCUMC/IAMSCU Dues (Educational Instution)</relationshipLabel>
        <relationshipName>Organization_Educationalint_Nascum_Duess</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IAMSCU_Dues__c</fullName>
        <label>IAMSCU Dues</label>
        <picklist>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unpaid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NASCUMC_Dues__c</fullName>
        <label>NASCUMC Dues</label>
        <picklist>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unpaid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Nascum_Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Nascum Dues whether paid or unpaid</description>
        <label>Nascum Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>NASCUMC/IAMSCU Dues</relationshipLabel>
        <relationshipName>Nascum_Dues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>NASCUMC/IAMSCU Dues</label>
    <nameField>
        <displayFormat>ND-{0000}</displayFormat>
        <label>IAMSCU/NASCUMC Dues</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NASCUMC/IAMSCU Dues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>